--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="margin: 0; padding: 0;">
-    <header style="background-color: #FF0000; height: 70px; width: 100%;">
+<body style="margin:0; padding:0">
+    <header style="Background-color:#FF0000; height: 70px; width:100%;">
     </header>
-    <footer style="background-color: #00FF00; height: 60px; width: 100%; text-align: center; display: flex; justify-content: center; align-items: center; margin-top: 40%;">Best School</footer>
+    <footer style="Background-color:#00FF00; height:60px; width:100%; position: absolute; bottom:0; text-align:center; line-height:60px">
+        Best School
+    </footer>
 </body>
 </html>
